backend/k8s/base/audit-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audit-service
spec:
  rules:
    - host: ${AUDIT_SERVICE_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 8087
